--- a/source/index_en.html
+++ b/source/index_en.html
@@ -103,7 +103,7 @@
                             <td align="left" valign="top" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;">&nbsp;</td>
                           </tr>
                           <tr>
-                            <td align="left" valign="top" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;">This event is a unique chance to connect with like-minded strategic leaders and ambitious investors focused on sustainable wealth growth in an ever-evolving market, Don’t miss out on this opportunity to enhance your investment strategy and network with industry pioneers!</td>
+                            <td align="left" valign="top" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;">This event is a unique chance to connect with like-minded strategic leaders and ambitious investors focused on sustainable wealth growth in an ever-evolving market. Don’t miss out on this opportunity to enhance your investment strategy and network with industry pioneers!</td>
                           </tr>
                           <tr>
                             <td align="left" valign="top" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;">&nbsp;</td>
@@ -159,8 +159,8 @@
                             <td valign="middle" bgcolor="#db0011" style="padding: 10px 0 10px 25px; margin: 0; border: none; line-height: 1.3; font-size: 18px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><strong>VENUE</strong></td>
                           </tr>
                           <tr>
-                            <td valign="middle" style="padding: 10px 15px 30px 25px; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><strong>Hilton Saigon,<br />
-                              Saigon 1 Ballroom, level 5</strong><br />
+                            <td valign="middle" style="padding: 10px 15px 30px 25px; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><strong>Hilton Saigon<br />
+                              Saigon 1 Ballroom, Level 5</strong><br />
                               <br />
                               11 Cong Truong Me Linh street, Sai Gon Ward, HCMC</td>
                           </tr>
@@ -231,7 +231,7 @@
                               </table></td>
                           </tr>
                           <tr>
-                            <td height="50" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><img src="image/dash.png" width="50" height="auto" alt="" style="display: block"/></td>
+                            <td height="28" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><img src="image/dash.png" width="28" height="auto" alt="" style="display: block"/></td>
                           </tr>
                           <tr>
                             <td style="padding: 0 0 20px 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><img src="image/chs_box_6.png" width="213" height="auto" alt="" style="display: block"/></td>
