--- a/source/index_en.html
+++ b/source/index_en.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Your invitation to the Exclusive HSBC Premier Event See Beyond. Invest Beyond</title>
+<title>Your invitation to the Exclusive HSBC Premier Event Have You Diversified Enough?</title>
 <style type="text/css">
 * {
     box-sizing: border-box;
