--- a/source/index_vn.html
+++ b/source/index_vn.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Thư mời tham dự sự kiện đặc biệt HSBC Premier See Beyond. Invest Beyond</title>
+<title>Thư mời tham dự sự kiện đặc biệt HSBC Premier Have You Diversified Enough?</title>
 <style type="text/css">
 * {
     box-sizing: border-box;
