--- a/source/index_vn.html
+++ b/source/index_vn.html
@@ -77,10 +77,10 @@
         <tr>
           <td align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
               <tr>
-                <td align="left" bgcolor="#ededed" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
+                <td align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
                     <tr>
-                      <td width="40" align="left" bgcolor="#ededed" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><img src="image/dash.png" width="40" height="auto" alt="" style="display: block"/></td>
-                      <td width="330" align="left" valign="top" bgcolor="#ededed" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
+                      <td width="40" align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><img src="image/dash.png" width="40" height="auto" alt="" style="display: block"/></td>
+                      <td align="left" valign="top" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
                           <tr>
                             <td height="40" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><img src="image/dash.png" width="40" height="auto" alt="" style="display: block"/></td>
                           </tr>
@@ -135,42 +135,60 @@
                               HSBC Premier</td>
                           </tr>
                           <tr>
-                            <td height="40" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><img src="image/dash.png" width="40" height="auto" alt="" style="display: block"/></td>
+                            <td height="20" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 1px; font-family: Arial, Helvetica, sans-serif !important;"><img src="image/dash.png" width="40" height="20" alt="" style="display: block"/></td>
                           </tr>
                         </table></td>
-                      <td width="40" align="left" bgcolor="#ededed" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><img src="image/dash.png" width="40" height="auto" alt="" style="display: block"/></td>
-                      <td align="left" valign="top" bgcolor="#730014" style="padding: 0; margin: 0; border-radius: 10px 0 0 10px; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
-                          <tr>
-                            <td valign="middle" bgcolor="#db0011" style="padding: 10px 0 10px 25px; margin: 0; border: none; line-height: 1.3; font-size: 18px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><strong>NGÀY</strong></td>
-                          </tr>
-                          <tr>
-                            <td valign="middle" style="padding: 10px 0 30px 25px; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><strong>Thứ Tư</strong>,<br />
-                              ngày 8 tháng 10, 2025</td>
-                          </tr>
-						  <tr>
-                            <td valign="middle" bgcolor="#db0011" style="padding: 10px 0 10px 25px; margin: 0; border: none; line-height: 1.3; font-size: 18px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><strong>THỜI GIAN</strong></td>
-                          </tr>
-                          <tr>
-                            <td valign="middle" style="padding: 10px 0 30px 25px; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><strong>09:30 | </strong>Đón khách<br /><strong>10:30 | </strong>Bắt đầu sự kiện<br /><strong>12:00 | </strong>Kết thúc sự kiện</td>
-                          </tr>
-						  <tr>
-                            <td valign="middle" bgcolor="#db0011" style="padding: 10px 0 10px 25px; margin: 0; border: none; line-height: 1.3; font-size: 18px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><strong>ĐỊA ĐIỂM</strong></td>
-                          </tr>
-                          <tr>
-                            <td valign="middle" style="padding: 10px 25px 30px 25px; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><strong>Hilton Saigon,<br />Sảnh Saigon 1, lầu 5</strong><br /><br />11 Công Trường Mê Linh, phường Sài Gòn, TP.HCM</td>
-                          </tr>
-						  <tr>
-                            <td valign="middle" bgcolor="#db0011" style="padding: 10px 0 10px 25px; margin: 0; border: none; line-height: 1.3; font-size: 18px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><strong>NGÔN NGỮ<br />TẠI SỰ KIỆN</strong></td>
-                          </tr>
-                          <tr>
-                            <td valign="middle" style="padding: 10px 0 30px 25px; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;">Tiếng Anh và Tiếng Việt</td>
-                          </tr>
-                        </table></td>
+                      <td width="40" align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><img src="image/dash.png" width="40" height="auto" alt="" style="display: block"/></td>
                     </tr>
                   </table></td>
               </tr>
               <tr>
-                <td height="10" align="left" style="padding: 0; margin: 0; border: none; line-height: 1.0; font-size: 1px; font-family: Arial, Helvetica, sans-serif !important;"><img src="image/dash.png" width="40" height="10" alt="" style="display: block"/></td>
+                <td align="left" valign="top" style="padding: 0; margin: 0; border-radius: 10px 0 0 10px; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
+                    <tr>
+                      <td width="40" align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><img src="image/dash.png" width="40" height="auto" alt="" style="display: block"/></td>
+                      <td align="left" valign="top" bgcolor="#730014" style="padding: 0; margin: 0; border-radius: 10px 0 0 10px; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
+                          <tr>
+                            <td width="28" align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><img src="image/dash.png" width="28" height="auto" alt="" style="display: block"/></td>
+                            <td align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
+                                <tr>
+                                  <td width="265" align="left" style="padding: 20px 0 20px 10px; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><strong>Thông tin sự kiện</strong></td>
+                                  <td align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;">&nbsp;</td>
+                                  <td width="250" align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;">&nbsp;</td>
+                                </tr>
+                                <tr>
+                                  <td valign="middle" bgcolor="#FFFFFF" style="padding: 5px 0 5px 10px; margin: 0; border-radius: 5px; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #730014;"><strong>Ngày</strong></td>
+                                  <td align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;">&nbsp;</td>
+                                  <td valign="middle" bgcolor="#FFFFFF" style="padding: 5px 0 5px 10px; margin: 0; border-radius: 5px; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #730014;"><strong>Thời gian</strong></td>
+                                </tr>
+                                <tr>
+                                  <td align="left" valign="top" style="padding: 5px 0 20px 10px; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><strong>Thứ Tư</strong>,<br />
+                                    ngày 8 tháng 10, 2025</td>
+                                  <td align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;">&nbsp;</td>
+                                  <td align="left" valign="top" style="padding: 5px 0 20px 10px; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><strong>09:30 | </strong>Đón khách<br />
+                                    <strong>10:30 | </strong>Bắt đầu sự kiện<br />
+                                    <strong>12:00 | </strong>Kết thúc sự kiện</td>
+                                </tr>
+                                <tr>
+                                  <td valign="middle" bgcolor="#FFFFFF" style="padding: 5px 0 5px 10px; margin: 0; border-radius: 5px; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #730014;"><strong>Địa điểm</strong></td>
+                                  <td align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;">&nbsp;</td>
+                                  <td valign="middle" bgcolor="#FFFFFF" style="padding: 5px 0 5px 10px; margin: 0; border-radius: 5px; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #730014;"><strong>Ngôn ngữ tại sự kiện</strong></td>
+                                </tr>
+                                <tr>
+                                  <td align="left" valign="top" style="padding: 5px 0 20px 10px; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;">Hilton Saigon, Sảnh Saigon 1, lầu 5<br />
+                                    11 Công Trường Mê Linh, phường Sài Gòn, TP.HCM</td>
+                                  <td align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;">&nbsp;</td>
+                                  <td align="left" valign="top" style="padding: 5px 0 20px 10px; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;">Tiếng Anh và Tiếng Việt</td>
+                                </tr>
+                              </table></td>
+                            <td width="28" align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><img src="image/dash.png" width="28" height="auto" alt="" style="display: block"/></td>
+                          </tr>
+                        </table></td>
+                      <td width="40" align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><img src="image/dash.png" width="40" height="auto" alt="" style="display: block"/></td>
+                    </tr>
+                  </table></td>
+              </tr>
+              <tr>
+                <td height="20" align="left" style="padding: 0; margin: 0; border: none; line-height: 1.0; font-size: 1px; font-family: Arial, Helvetica, sans-serif !important;"><img src="image/dash.png" width="40" height="20" alt="" style="display: block"/></td>
               </tr>
               <tr>
                 <td align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
@@ -195,6 +213,15 @@
                                   <td width="115" align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><img src="image/chs_box_2.png" width="90" height="auto" alt="" style="display: block"/></td>
                                   <td valign="middle" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><strong style="color: #730014;">Ông Tim Evans</strong><br />
                                     Chief Executive Officer and Head of Banking</td>
+                                </tr>
+                              </table></td>
+                          </tr>
+                          <tr>
+                            <td align="center" style="padding: 0 0 15px 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><table width="570" border="0" cellpadding="0" cellspacing="0" class="chs_body">
+                                <tr>
+                                  <td width="115" align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><img src="image/chs_box_10.png" width="90" height="auto" alt="" style="display: block"/></td>
+                                  <td valign="middle" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><strong style="color: #730014;">Ông Ranganath Ananth</strong><br />
+                                    Head of International Wealth and Premier</td>
                                 </tr>
                               </table></td>
                           </tr>
@@ -263,9 +290,9 @@
                     </tr>
                   </table></td>
               </tr>
-			  <tr>
-				  <td height="40"><img src="image/dash.png" width="40" height="auto" alt="" style="display: block"/></td>
-			  </tr>
+              <tr>
+                <td height="40"><img src="image/dash.png" width="40" height="auto" alt="" style="display: block"/></td>
+              </tr>
               <tr>
                 <td bgcolor="#f5f5f5" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
                     <tr>
@@ -342,7 +369,7 @@
                                 </tr>
                               </table></td>
                           </tr>
-						  <tr>
+                          <tr>
                             <td style="padding: 20px 0 0 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #000000;"><strong>Thông tin quan trọng</strong></td>
                           </tr>
                           <tr>
