--- a/source/index_vn.html
+++ b/source/index_vn.html
@@ -66,9 +66,6 @@
                     <tr>
                       <td style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 33px; font-family: Arial, Helvetica, sans-serif !important; color: #730014;">Have You Diversified Enough?</td>
                     </tr>
-                    <tr>
-                      <td height="60" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><img src="image/dash.png" width="60" height="auto" alt="" style="display: block"/></td>
-                    </tr>
                   </table></td>
                 <td width="40"><img src="image/dash.png" width="40" height="auto" alt="" style="display: block"/></td>
               </tr>
@@ -82,7 +79,7 @@
                       <td width="40" align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><img src="image/dash.png" width="40" height="auto" alt="" style="display: block"/></td>
                       <td align="left" valign="top" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
                           <tr>
-                            <td height="40" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><img src="image/dash.png" width="40" height="auto" alt="" style="display: block"/></td>
+                            <td align="left" valign="top" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;">&nbsp;</td>
                           </tr>
                           <tr>
                             <td align="left" valign="top" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;">Kính gửi Quý khách hàng Premier «First_Name»</td>
@@ -128,9 +125,6 @@
                             <td align="left" valign="top" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;">&nbsp;</td>
                           </tr>
                           <tr>
-                            <td align="left" valign="top" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;">&nbsp;</td>
-                          </tr>
-                          <tr>
                             <td align="left" valign="top" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;">Trân trọng,<br />
                               HSBC Premier</td>
                           </tr>
@@ -143,10 +137,10 @@
                   </table></td>
               </tr>
               <tr>
-                <td align="left" valign="top" style="padding: 0; margin: 0; border-radius: 10px 0 0 10px; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
+                <td align="left" valign="top" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
                     <tr>
                       <td width="40" align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><img src="image/dash.png" width="40" height="auto" alt="" style="display: block"/></td>
-                      <td align="left" valign="top" bgcolor="#730014" style="padding: 0; margin: 0; border-radius: 10px 0 0 10px; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
+                      <td align="left" valign="top" bgcolor="#730014" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
                           <tr>
                             <td width="28" align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><img src="image/dash.png" width="28" height="auto" alt="" style="display: block"/></td>
                             <td align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
