--- a/source/index_en.html
+++ b/source/index_en.html
@@ -106,7 +106,7 @@
                             <td align="left" valign="top" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;">&nbsp;</td>
                           </tr>
                           <tr>
-                            <td align="left" valign="top" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;">Please note that this invitation is exclusively for you. Kindly confirm your attendance by DD/09/2025 with your Relationship Manager:</td>
+                            <td align="left" valign="top" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;">Please note that this invitation is exclusively for you. Kindly confirm your attendance by 25/09/2025 with your Relationship Manager:</td>
                           </tr>
                           <tr>
                             <td align="left" valign="top" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;">&nbsp;</td>
@@ -159,7 +159,7 @@
                                     October 8<sup style="font-size: 12px;">th</sup>, 2025</td>
                                   <td align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;">&nbsp;</td>
                                   <td align="left" valign="top" style="padding: 5px 0 20px 10px; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><strong>09:30 | </strong>Welcome guests<br />
-                                    <strong>10:30 | </strong>Start of event<br />
+                                    <strong>10:00 | </strong>Start of event<br />
                                     <strong>12:00 | </strong>End of event</td>
                                 </tr>
                                 <tr>
