--- a/source/index_vn.html
+++ b/source/index_vn.html
@@ -106,7 +106,7 @@
                             <td align="left" valign="top" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;">&nbsp;</td>
                           </tr>
                           <tr>
-                            <td align="left" valign="top" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;">Xin lưu ý lời mời này chỉ dành riêng cho Quý khách. Vui lòng xác nhận sự tham dự của Quý khách trước ngày DD/09/2025 với Giám đốc Quan hệ Khách hàng của Quý khách:</td>
+                            <td align="left" valign="top" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;">Xin lưu ý lời mời này chỉ dành riêng cho Quý khách. Vui lòng xác nhận sự tham dự của Quý khách trước ngày 25/09/2025 với Giám đốc Quan hệ Khách hàng của Quý khách:</td>
                           </tr>
                           <tr>
                             <td align="left" valign="top" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;">&nbsp;</td>
@@ -159,7 +159,7 @@
                                     ngày 8 tháng 10, 2025</td>
                                   <td align="left" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;">&nbsp;</td>
                                   <td align="left" valign="top" style="padding: 5px 0 20px 10px; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;"><strong>09:30 | </strong>Đón khách<br />
-                                    <strong>10:30 | </strong>Bắt đầu sự kiện<br />
+                                    <strong>10:00 | </strong>Bắt đầu sự kiện<br />
                                     <strong>12:00 | </strong>Kết thúc sự kiện</td>
                                 </tr>
                                 <tr>
